// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button render default slot 1`] = `
<button class="ghb-button ghb-button--default ghb-button--large ghb-goods-action-button ghb-goods-action-button--first ghb-goods-action-button--last">
  <div class="ghb-button__content"><span class="ghb-button__text">Default Content</span></div>
</button>
`;

exports[`Icon render default slot 1`] = `
<div role="button" tabindex="0" class="ghb-goods-action-icon">
  <div class="ghb-icon ghb-icon-undefined ghb-goods-action-icon__icon">
    <!---->
  </div>Default Content
</div>
`;

exports[`Icon render icon slot 1`] = `
<div role="button" tabindex="0" class="ghb-goods-action-icon">
  <div class="ghb-goods-action-icon__icon">Custom Icon
    <!---->
  </div>Text
</div>
`;

exports[`Icon render icon slot with badge 1`] = `
<div role="button" tabindex="0" class="ghb-goods-action-icon">
  <div class="ghb-goods-action-icon__icon">Custom Icon<div class="ghb-info">1</div>
  </div>Text
</div>
`;

exports[`Icon render icon slot with dot 1`] = `
<div role="button" tabindex="0" class="ghb-goods-action-icon">
  <div class="ghb-goods-action-icon__icon">Custom Icon<div class="ghb-info ghb-info--dot"></div>
  </div>Text
</div>
`;

exports[`disable safe-area-inset-bottom prop 1`] = `<div class="ghb-goods-action ghb-goods-action--unfit"></div>`;
